feat: new structure of JSON data

--- a/docs/turma/ein2023.mdx
+++ b/docs/turma/ein2023.mdx
@@ -11,15 +11,7 @@ const data = {
           teacher: "Darlan Roque Dapieve",
           classroom: "",
           students: "EIN2023",
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Desenho Técnico - 1529",
-          size: 2,
-          teacher: "Sérgio Takahashi",
-          classroom: "",
-          students: "EIN2023 - GB",
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20",
         },
         {
           subject: "Desenho Técnico - 1529",
@@ -27,7 +19,15 @@ const data = {
           teacher: "Sérgio Takahashi",
           classroom: "",
           students: "EIN2023 - GB",
-          time: "09:25 - 10:15"
+          time: "10:15 - 11:05",
+        },
+        {
+          subject: "Desenho Técnico - 1529",
+          size: 1,
+          teacher: "Sérgio Takahashi",
+          classroom: "",
+          students: "EIN2023 - GB",
+          time: "09:25 - 10:15",
         },
         {
           subject: "Eletricidade e Medidas Elétricas - 1530",
@@ -35,7 +35,7 @@ const data = {
           teacher: "Tiago Henrique dos Santos",
           classroom: "",
           students: "EIN2023 - GA",
-          time: "09:25 - 10:15"
+          time: "09:25 - 10:15",
         },
         {
           subject: "Eletricidade e Medidas Elétricas - 1530",
@@ -43,9 +43,9 @@ const data = {
           teacher: "Tiago Henrique dos Santos",
           classroom: "",
           students: "EIN2023 - GA",
-          time: "11:05 - 11:55"
-        }
-      ]
+          time: "11:05 - 11:55",
+        },
+      ],
     },
     {
       title: "Terça-Feira",
@@ -56,7 +56,7 @@ const data = {
           teacher: "Kátia Cristiane Kobus Novaes",
           classroom: "",
           students: "EIN2023",
-          time: "10:15 - 11:05"
+          time: "10:15 - 11:05",
         },
         {
           subject: "Desenho Técnico - 1529",
@@ -64,7 +64,7 @@ const data = {
           teacher: "Sérgio Takahashi",
           classroom: "",
           students: "EIN2023 - GA",
-          time: "07:30 - 08:20"
+          time: "07:30 - 08:20",
         },
         {
           subject: "Desenho Técnico - 1529",
@@ -72,7 +72,7 @@ const data = {
           teacher: "Sérgio Takahashi",
           classroom: "",
           students: "EIN2023 - GA",
-          time: "09:25 - 10:15"
+          time: "09:25 - 10:15",
         },
         {
           subject: "Eletricidade e Medidas Elétricas - 1530",
@@ -80,7 +80,7 @@ const data = {
           teacher: "Tiago Henrique dos Santos",
           classroom: "",
           students: "EIN2023 - GB",
-          time: "07:30 - 08:20"
+          time: "07:30 - 08:20",
         },
         {
           subject: "Eletricidade e Medidas Elétricas - 1530",
@@ -88,9 +88,9 @@ const data = {
           teacher: "Tiago Henrique dos Santos",
           classroom: "",
           students: "EIN2023 - GB",
-          time: "09:25 - 10:15"
-        }
-      ]
+          time: "09:25 - 10:15",
+        },
+      ],
     },
     {
       title: "Quarta-Feira",
@@ -101,7 +101,7 @@ const data = {
           teacher: "Joaquim José Honório de Lima",
           classroom: "Laboratório de Informatica A",
           students: "EIN2023",
-          time: "07:30 - 08:20"
+          time: "07:30 - 08:20",
         },
         {
           subject: "Artes 1 - 121",
@@ -109,7 +109,7 @@ const data = {
           teacher: "Renata Carolina Pereira",
           classroom: "",
           students: "EIN2023",
-          time: "11:05 - 11:55"
+          time: "11:05 - 11:55",
         },
         {
           subject: "Matemática 1 - 142",
@@ -117,9 +117,9 @@ const data = {
           teacher: "Sérgio Augusto Dias Castro",
           classroom: "",
           students: "EIN2023",
-          time: "09:25 - 10:15"
-        }
-      ]
+          time: "09:25 - 10:15",
+        },
+      ],
     },
     {
       title: "Quinta-Feira",
@@ -130,7 +130,7 @@ const data = {
           teacher: "Eliana Peliçon Pereira Figueira",
           classroom: "",
           students: "EIN2023",
-          time: "09:25 - 10:15"
+          time: "09:25 - 10:15",
         },
         {
           subject: "Química 1 - 143",
@@ -138,7 +138,7 @@ const data = {
           teacher: "Elizangela Cavazzini Cesca",
           classroom: "Laboratório de Química",
           students: "EIN2023",
-          time: "11:05 - 11:55"
+          time: "11:05 - 11:55",
         },
         {
           subject: "Sociologia 1 - 146",
@@ -146,7 +146,7 @@ const data = {
           teacher: "Everaldo Lorensetti",
           classroom: "",
           students: "EIN2023",
-          time: "10:15 - 11:05"
+          time: "10:15 - 11:05",
         },
         {
           subject: "Filosofia 1 - 124",
@@ -154,7 +154,7 @@ const data = {
           teacher: "Fabio Antônio da Silva",
           classroom: "",
           students: "EIN2023",
-          time: "08:20 - 09:10"
+          time: "08:20 - 09:10",
         },
         {
           subject: "Lingua Estrangeira Moderna - Espanhol - 1540",
@@ -162,9 +162,9 @@ const data = {
           teacher: "Michelli Cristina Galli",
           classroom: "",
           students: "EIN2023",
-          time: "07:30 - 08:20"
-        }
-      ]
+          time: "07:30 - 08:20",
+        },
+      ],
     },
     {
       title: "Sexta-Feira",
@@ -175,7 +175,7 @@ const data = {
           teacher: "Bruna Valeriano da Silva Lisboa",
           classroom: "Educação Física / Sala 4 B2",
           students: "EIN2023",
-          time: "10:15 - 11:05"
+          time: "10:15 - 11:05",
         },
         {
           subject: "Física 1 - 125",
@@ -183,7 +183,7 @@ const data = {
           teacher: "Bruno Garcia Bonfim",
           classroom: "",
           students: "EIN2023",
-          time: "07:30 - 08:20"
+          time: "07:30 - 08:20",
         },
         {
           subject: "Geografia 1 - 126",
@@ -191,7 +191,7 @@ const data = {
           teacher: "Jhones Donizetti Mendes",
           classroom: "",
           students: "EIN2023",
-          time: "11:05 - 11:55"
+          time: "11:05 - 11:55",
         },
         {
           subject: "História 1 - 131",
@@ -199,95 +199,89 @@ const data = {
           teacher: "Suzane Conceição Pantolfi Tostes",
           classroom: "",
           students: "EIN2023",
-          time: "09:25 - 10:15"
-        }
-      ]
-    }
+          time: "09:25 - 10:15",
+        },
+      ],
+    },
   ],
   time: [
     {
       time: "07:30 - 08:20",
-      size: 50
+      size: 50,
     },
     {
       time: "08:20 - 09:10",
-      size: 50
+      size: 50,
     },
     {
       time: "09:10 - 09:25",
-      size: 15
+      size: 15,
     },
     {
       time: "09:25 - 10:15",
-      size: 50
+      size: 50,
     },
     {
       time: "10:15 - 11:05",
-      size: 50
+      size: 50,
     },
     {
       time: "11:05 - 11:55",
-      size: 50
+      size: 50,
     },
     {
       time: "11:55 - 13:10",
-      size: 75
+      size: 75,
     },
     {
       time: "13:10 - 14:00",
-      size: 50
+      size: 50,
     },
     {
       time: "14:00 - 14:50",
-      size: 50
+      size: 50,
     },
     {
       time: "14:50 - 15:05",
-      size: 15
+      size: 15,
     },
     {
       time: "15:05 - 15:55",
-      size: 50
+      size: 50,
     },
     {
       time: "15:55 - 16:45",
-      size: 50
+      size: 50,
     },
     {
       time: "16:45 - 19:00",
-      size: 135
+      size: 135,
     },
     {
       time: "19:00 - 19:50",
-      size: 50
+      size: 50,
     },
     {
       time: "19:50 - 20:40",
-      size: 50
+      size: 50,
     },
     {
       time: "20:40 - 21:00",
-      size: 20
+      size: 20,
     },
     {
       time: "21:00 - 21:50",
-      size: 50
+      size: 50,
     },
     {
       time: "21:50 - 22:40",
-      size: 50
-    }
-  ]
-}
+      size: 50,
+    },
+  ],
+};
 
 # EIN2023
 
 <div>
-    {
-        <Grid
-            title={data.title} 
-            weekClasses={data.weekClasses} 
-            time={data.time}
-        />
-    }
+  {<Grid title={data.title} weekClasses={data.weekClasses} time={data.time} />}
 </div>
