fix: bugs of the links

--- a/docs/turma/ein2023.mdx
+++ b/docs/turma/ein2023.mdx
@@ -8,9 +8,7 @@ const data = {
         {
           subject: "Informática Instrumental - 1532",
           size: 2,
-          teachers: [
-            "Joaquim José Honório de Lima"
-          ],
+          teachers: ["Joaquim José Honório de Lima"],
           classroom: "Laboratório de Informatica A",
           students: "EIN2023",
           time: "07:30 - 08:20",
@@ -18,40 +16,36 @@ const data = {
         {
           subject: "Desenho Técnico - 1529",
           size: 2,
-          teacher: "Sérgio Takahashi",
+          teachers: ["Sérgio Takahashi"],
           classroom: "",
           students: "EIN2023 - GB",
-          time: "10:15 - 11:05"
+          time: "10:15 - 11:05",
         },
         {
           subject: "Desenho Técnico - 1529",
           size: 1,
-          teachers: [
-            "Michelli Cristina Galli"
-          ],
+          teachers: ["Michelli Cristina Galli"],
           classroom: "",
           students: "EIN2023 - GB",
-          time: "09:25 - 10:15"
+          time: "09:25 - 10:15",
         },
         {
           subject: "Matemática 1 - 142",
           size: 2,
-          teachers: [
-            "Sérgio Augusto Dias Castro"
-          ],
+          teachers: ["Sérgio Augusto Dias Castro"],
           classroom: "",
           students: "EIN2023 - GA",
-          time: "09:25 - 10:15"
+          time: "09:25 - 10:15",
         },
         {
           subject: "Eletricidade e Medidas Elétricas - 1530",
           size: 1,
-          teacher: "Tiago Henrique dos Santos",
+          teachers: ["Tiago Henrique dos Santos"],
           classroom: "",
           students: "EIN2023 - GA",
-          time: "11:05 - 11:55"
-        }
-      ]
+          time: "11:05 - 11:55",
+        },
+      ],
     },
     {
       dayName: "Terça-Feira",
@@ -59,54 +53,44 @@ const data = {
         {
           subject: "Biologia 1 - 122",
           size: 1,
-          teachers: [
-            "Eliana Peliçon Pereira Figueira"
-          ],
+          teachers: ["Eliana Peliçon Pereira Figueira"],
           classroom: "Laboratório de Biologia",
           students: "EIN2023",
-          time: "10:15 - 11:05"
+          time: "10:15 - 11:05",
         },
         {
           subject: "Sociologia 1 - 146",
           size: 1,
-          teachers: [
-            "Everaldo Lorensetti"
-          ],
+          teachers: ["Everaldo Lorensetti"],
           classroom: "",
           students: "EIN2023 - GA",
-          time: "07:30 - 08:20"
+          time: "07:30 - 08:20",
         },
         {
           subject: "Geografia 1 - 126",
           size: 1,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
+          teachers: ["Jhones Donizetti Mendes"],
           classroom: "",
           students: "EIN2023 - GA",
-          time: "09:25 - 10:15"
+          time: "09:25 - 10:15",
         },
         {
           subject: "Artes 1 - 121",
           size: 1,
-          teachers: [
-            "Renata Carolina Pereira"
-          ],
+          teachers: ["Renata Carolina Pereira"],
           classroom: "",
           students: "EIN2023 - GB",
-          time: "07:30 - 08:20"
+          time: "07:30 - 08:20",
         },
         {
           subject: "História 1 - 131",
           size: 1,
-          teachers: [
-            "Suzane Conceição Pantolfi Tostes"
-          ],
+          teachers: ["Suzane Conceição Pantolfi Tostes"],
           classroom: "",
           students: "EIN2023 - GB",
-          time: "09:25 - 10:15"
-        }
-      ]
+          time: "09:25 - 10:15",
+        },
+      ],
     },
     {
       dayName: "Quarta-Feira",
@@ -114,9 +98,7 @@ const data = {
         {
           subject: "Lingua Portuguesa 1 - 138",
           size: 2,
-          teachers: [
-            "Kátia Cristiane Kobus Novaes"
-          ],
+          teachers: ["Kátia Cristiane Kobus Novaes"],
           classroom: "",
           students: "EIN2023",
           time: "07:30 - 08:20",
@@ -124,12 +106,10 @@ const data = {
         {
           subject: "Desenho Técnico - 1529",
           size: 2,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
+          teachers: ["Sérgio Takahashi"],
           classroom: "Laboratório de Desenho Técnico / Sala 5-2",
           students: "EIN2023 - GB",
-          time: "09:25 - 10:15"
+          time: "09:25 - 10:15",
         },
         {
           subject: "Desenho Técnico - 1529",
@@ -137,7 +117,7 @@ const data = {
           teacher: "Renata Carolina Pereira",
           classroom: "",
           students: "EIN2023",
-          time: "11:05 - 11:55"
+          time: "11:05 - 11:55",
         },
         {
           subject: "Eletricidade e Medidas Elétricas - 1530",
@@ -145,9 +125,9 @@ const data = {
           teacher: "Sérgio Augusto Dias Castro",
           classroom: "",
           students: "EIN2023",
-          time: "09:25 - 10:15"
-        }
-      ]
+          time: "09:25 - 10:15",
+        },
+      ],
     },
     {
       dayName: "Quinta-Feira",
@@ -155,32 +135,26 @@ const data = {
         {
           subject: "Educação Física 1 - 123",
           size: 1,
-          teachers: [
-            "Bruna Valeriano da Silva Lisboa"
-          ],
+          teachers: ["Bruna Valeriano da Silva Lisboa"],
           classroom: "Educação Física / Sala 4 B2",
           students: "EIN2023",
-          time: "09:25 - 10:15"
+          time: "09:25 - 10:15",
         },
         {
           subject: "Física 1 - 125",
           size: 2,
-          teachers: [
-            "Bruno Garcia Bonfim"
-          ],
+          teachers: ["Bruno Garcia Bonfim"],
           classroom: "Laboratório de Física",
           students: "EIN2023",
-          time: "11:05 - 11:55"
+          time: "11:05 - 11:55",
         },
         {
           subject: "Química 1 - 143",
           size: 1,
-          teachers: [
-            "Elizangela Cavazzini Cesca"
-          ],
+          teachers: ["Elizangela Cavazzini Cesca"],
           classroom: "Laboratório de Química",
           students: "EIN2023",
-          time: "10:15 - 11:05"
+          time: "10:15 - 11:05",
         },
         {
           subject: "Filosofia 1 - 124",
@@ -188,7 +162,7 @@ const data = {
           teacher: "Fabio Antônio da Silva",
           classroom: "",
           students: "EIN2023",
-          time: "08:20 - 09:10"
+          time: "08:20 - 09:10",
         },
         {
           subject: "Lingua Estrangeira Moderna - Espanhol - 1540",
@@ -209,14 +183,12 @@ const data = {
           teacher: "Bruna Valeriano da Silva Lisboa",
           classroom: "Educação Física / Sala 4 B2",
           students: "EIN2023",
-          time: "10:15 - 11:05"
+          time: "10:15 - 11:05",
         },
         {
           subject: "Física 1 - 125",
           size: 2,
-          teachers: [
-            "Darlan Roque Dapieve"
-          ],
+          teachers: ["Darlan Roque Dapieve"],
           classroom: "",
           students: "EIN2023",
           time: "07:30 - 08:20",
@@ -224,12 +196,10 @@ const data = {
         {
           subject: "Desenho Técnico - 1529",
           size: 2,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
+          teachers: ["Sérgio Takahashi"],
           classroom: "Laboratório de Desenho Técnico / Sala 5-2",
           students: "EIN2023 - GA",
-          time: "10:15 - 11:05"
+          time: "10:15 - 11:05",
         },
         {
           subject: "Desenho Técnico - 1529",
@@ -237,7 +207,7 @@ const data = {
           teacher: "Jhones Donizetti Mendes",
           classroom: "",
           students: "EIN2023",
-          time: "11:05 - 11:55"
+          time: "11:05 - 11:55",
         },
         {
           subject: "Eletricidade e Medidas Elétricas - 1530",
@@ -245,10 +215,10 @@ const data = {
           teacher: "Suzane Conceição Pantolfi Tostes",
           classroom: "",
           students: "EIN2023",
-          time: "09:25 - 10:15"
-        }
-      ]
-    }
+          time: "09:25 - 10:15",
+        },
+      ],
+    },
   ],
   time: [
     {
